libavg 0.9.0.pre1 - August 9, 2009

  svn revision 4046

libavg 0.8.0 - September 22, 2008

  svn revision 3196

libavg 0.8.0.pre3 - September 16, 2008

  svn revision 3171

  * Fixed testgpu bug on older graphics cards.
  * Fixed gcc 4.3 compile.
  * Error instead of crash if vertex buffers are not supported.

libavg 0.8.0.pre2 - September 13, 2008

  svn revision 3161

  Major new Features:
  
    * Major tracking improvements: Parts now run as shaders on the GPU, 
      lots of optimizations, speed and ellipse axes of blobs are now available
      in python, blob contours can be calculated, etc.
    * Major rendering performance improvements.
    * Much improved words node - variant attribute to select font variant to use,
      _much_ faster rendering, full unicode support, getGlyphPos() and 
      getGlyphSize() methods, avg_showfont.py utility (parts by oxullol02l.org).
    * Support for stereo sound mixing (Mostly Nick Hebner - hebern@gmail.com).
    * Support for audio playback for videos (Mostly Nick Hebner - hebern@gmail.com).
  
  Other improvements:
    * General Mac OS X 10.5 stability.
    * Added mediadir attribute for div nodes to specify where media used in child
      nodes should be loaded from.
    * Switched from ImageMagick to GraphicsMagick.
    * Nodes can now be constructed in python using a dict for the attributes (Nick
      Hebner - hebern@gmail.com).
    * Mouse Wheel support.
    * Added Player::setWindowPos()
    * Added Node::unlink() to remove a node from the tree.
    * The anim module now allows only one animation per node attribute.
    * avg_videoplayer.py utility.
    * Support for application-specific fonts.
    * Added Player::getGPUMemoryUsage() (oxullo@02l.net).
    * Experimental button, checkbox and textarea gui classes.
    * Added Player::loadString() to load avg tree from a string.
    * Added DivNode::reorderChild(), ::insertChildBefore() and ::removeChild(pNode).
    * Experimental TUIO protocol support in remote.py.