@@ -1,4 +1,4 @@
 SUBDIRS = base graphics imaging lmfit audio video player conradrelais parport anim \
         wrapper python test utils
 
-EXTRA_DIST = avgrc avgconfigwrapper.h api.h
+EXTRA_DIST = avgrc avgconfigwrapper.h api.h avgconfig_win.h
